--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,7 @@ celerybeat.pid
 .env
 .venv
 env/
+megafon_env/
 venv/
 ENV/
 env.bak/
@@ -127,3 +128,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# catboost
+catboost_info/
+
+data/
